--- a/src/Weather.css
+++ b/src/Weather.css
@@ -35,6 +35,16 @@
   margin-left: 10px;
 }
 
+.Weather .unit {
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  position: relative;
+  line-height: 1;
+  margin-left: 5px;
+  font-weight: 400;
+  top: 0px;  
+}
+
 .Weather canvas {
   margin: 10px auto;
 }
